---------------------------------------------------------------------------------------------------
Version: 0.69.81
Date: ????
  Changes:
    - More crushing industry compat.
---------------------------------------------------------------------------------------------------
Version: 0.69.80
Date: 2025-07-11
  Changes:
    - New Recipe: Biofusion science can now be used to make promethium science with fewer promethium chunks.
    - Biochamber productivity bonus has been made more granular. 10 ranks of +5% instead of 5 ranks of +10%. It's also more expensive now for the top rank.
      ► Everyone's research rank has been migrated to avoid any lost progress.
---------------------------------------------------------------------------------------------------
Version: 0.69.79
Date: 2025-07-10
  Changes:
    - Fixed lore typo
    - Added 4 new lore entries. Including some hazards.
    - Added a cooldown to lore, so you don't get bombarded with many prompts at once.
    - Forcing everyone up in version for some dependencies that fix bugs.
    - Slight UPS optimization for trashsteroids.
    - Factorissimo fix
---------------------------------------------------------------------------------------------------
Version: 0.69.78
Date: 2025-07-06
  Changes:
    - Fixed crash that happened when super force building rails on Rubia.
    - Planned to come soon: Biter egg productivity research added to biofusion science.
    - Planned to come soon: Biolab pollution reduction research.
---------------------------------------------------------------------------------------------------
Version: 0.69.77
Date: 2025-07-06
  Changes:
    - Made Krastorio 2 SO compatibility code more stable for other mods being included.
    - Improved contrast of mod thumbnail.
---------------------------------------------------------------------------------------------------
Version: 0.69.76
Date: 2025-07-05
  Changes:
    - Version up of machine upgrades, to force in the bug fixes.