@@ -3,6 +3,7 @@ Version: 0.69.81
 Date: ????
   Changes:
     - More crushing industry compat.
+    - Compat with both K2SO + bzcarbon at the same time.
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.80
 Date: 2025-07-11
